More fancy stupid stuff.